--- a/index.html
+++ b/index.html
@@ -427,11 +427,23 @@
 
     <section class="bg-[#E3E3E3] py-20">
       <div class="w-4/5 mx-auto text-gray-500 ">
-        <div>
-          <img src="images/clustter-icon.png" alt="" class="w-[50px]">
+        <div class="flex">
+          <div>
+            <div>
+              <img src="images/clustter-icon.png" alt="" class="w-[50px]">
+            </div>
+            <p class="w-1/2 pt-8">Clustter is a community-driven migrant app designed to provide financial solutions and support services to help migrants, international students, and expats thrive in their new countries.</p>
+          </div>
+          <div class="flex items-start flex-shrink-0">
+            <a href="#">
+              <img src="images/appstore.png" alt="AppStore logo" class="h-[60px]">
+            </a>
+            <a href="#">
+              <img src="images/googleplay.png" alt="Google Play store logo" class="h-[60px]">
+            </a>
+            
+          </div>
         </div>
-        <p class="w-1/3 pt-8">Clustter is a community-driven migrant app designed to provide financial solutions and support services to help migrants, international students, and expats thrive in their new countries.</p>
-
         <div class="flex justify-between pt-10">
           <p>© Clustter Technology Ltd. 2023</p>
           <div class="flex gap-x-6">
