--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="flex lg:flex-1">
               <a href="#" class="-m-1.5 p-1.5">
                 <span class="sr-only">Clustter</span>
-                <img class="h-8 w-auto" src="images/clustter-logo.png" alt="">
+                <img class="h-6 md:h-8 w-auto" src="images/clustter-logo.png" alt="">
               </a>
             </div>
 
@@ -49,7 +49,7 @@
               </button>
             </div>
 
-            <div class="flex flex-1 justify-end">
+            <div class="hidden md:flex flex-1 justify-end">
               <a href="#" class="bg-clustterBlue text-xs font-semibold leading-6 text-clustterTorquoise px-3 py-2 md:px-5 md:py-4 rounded-md uppercase">Join the waitlist <span aria-hidden="true">&rarr;</span></a>
             </div>
 
